# ensemble

./: README.md  pyproject.toml
analysis/: IXI_brain_ensemble.py  IXI_brain_ensemble_plot.py
src/ensemble/: command_line.py  constants.py  hello.py  seg_to_ensemble.py
tests/: test_hello.py  test_seg_to_ensemble.py
tests/files/: test_bet_fast.nii  test_mri.nii  test_ss_fast.nii  test_synthseg.nii  test_synthstrip.nii
